lorem ipsum en text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>40 ans</title>
 </head>
 
 <body>
@@ -13,34 +13,8 @@
     <!--partie 1 : écran fixe sur fond uni : il y a très longtemps...
      partie 2: titre qui s'affiche en grand puis disparait en reculant vers le haut sur fond static étoilé
     partie 3: défilement du texte du bas vers le haut sur fond statique étoilé-->
-    <p>Un voyage dans le temps vous attend...
-
-        Il y a bien longtemps, dans une galaxie lointaine, très lointaine...
-
-        épisode XXXX
-        Le 19 décembre 1982, une étoile est née, une étoile qui allait illuminer la galaxie de son sourire éclatant.
-        Cette étoile, c'est moi !
-
-        Aujourd'hui, je vous invite à embarquer dans votre vaisseau spatial personnel, équipé d'un hyperdrive spécial
-        qui nous permettra de remonter le temps jusqu'à cette date épique.
-
-        Rejoignez-moi pour célébrer mes 40 ans d'existence dans une aventure temporelle inoubliable. Mettez vos costumes
-        spatiaux et vos sabres laser, car nous allons revivre cette époque magique.
-
-        La fête se tiendra sur la planète Terre, dans le lieu de rendez-vous interstellaire : rue Camille Wolles à
-        Schaerbeek. Les portes de la machine à remonter le temps s'ouvriront à [Heure de début de la fête].
-
-        Il y aura de la musique intergalactique, des danses stellaires, des cocktails cosmiques et bien sûr, un gâteau
-        d'anniversaire digne d'une célébration galactique.
-
-        N'oubliez pas de confirmer votre présence, car même dans le passé, nous voulons que vous fassiez partie de cette
-        histoire épique !
-
-        Que la Force de l'amitié soit avec vous, et que notre voyage temporel soit un souvenir inoubliable.
-
-        R.S.V.P. avant le 32 novembre 2023.
-
-        Que la fête commence, et que la galaxie entière résonne de nos rires et de notre joie !</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex aut quam at impedit nihil nisi eveniet veniam eaque
+        doloremque neque magni, consectetur est cum adipisci praesentium consequatur. Est, blanditiis magni.</p>
 </body>
 
 </html>
