--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 
 <body>
-    <img src="fond-étoilé.jpg" href="C:\Users\jduss\code\star wars\Star-Wars-Crawl">
-    <!--partie 1 : écran fixe sur fond uni : il y a très longtemps...
-     partie 2: titre qui s'affiche en grand puis disparait en reculant vers le haut sur fond static étoilé
-    partie 3: défilement du texte du bas vers le haut sur fond statique étoilé-->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex aut quam at impedit nihil nisi eveniet veniam eaque
-        doloremque neque magni, consectetur est cum adipisci praesentium consequatur. Est, blanditiis magni.</p>
+    <p>Phrase d'intro fixe</p>
+    <div class="texte qui défile">
+        <h1>STAR WARS</h1>
+        <h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex aut quam at impedit nihil nisi eveniet veniam
+                eaque
+                doloremque neque magni, consectetur est cum adipisci praesentium consequatur. Est, blanditiis magni.</p>
+        </h2>
+    </div>
 </body>
 
 </html>
