--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>40 ans</title>
+    <title>Générique Star Wars</title>
 
 </head>
 
 <body>
-    <p>Phrase d'intro fixe</p>
+    <p>A long time ago in a galaxy far, far away ...</p>
     <div class="texte qui défile">
         <h1>STAR WARS</h1>
         <h2>
