intro text in blue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p>A long time ago in a galaxy far, far away ...</p>
+    <p class="intro" alt="intro text">A long time ago in a galaxy far, far away ...</p>
     <div class="texte qui défile">
         <h1>STAR WARS</h1>
         <h2>
